--- a/main.ipynb
+++ b/main.ipynb
@@ -29,7 +29,7 @@
     "The dataset was obtained through kaggle.com and was created by Nikhil Anand.\n",
     "\n",
     "### Content and Goals\n",
-    "The dataset contains 14 attributes which are age, sex, chest pain type, resting blood pressure, serum cholesterol, fasting blood sugar, resting electrocardiographic results, maximum heart rate achieved, exercise-induced angina, oldpeak — ST depression induced by exercise relative to rest, the slope of the peak exercise ST segment, number of major vessels and Thalassemia. The goal of thisd analysis is to accurately predict whether or not a patient has heart disease using the provided attributes. The analysis will also provide insights and help with properly diagnosing a patient.\n",
+    "The dataset contains 14 attributes which are age, sex, chest pain type, resting blood pressure, serum cholesterol, fasting blood sugar, resting electrocardiographic results, maximum heart rate achieved, exercise-induced angina, oldpeak — ST depression induced by exercise relative to rest, the slope of the peak exercise ST segment, number of major vessels and Thalassemia. The goal of this analysis is to accurately predict whether or not a patient has heart disease using the provided attributes. The analysis will also provide insights to help with properly diagnosing a patient with heart disease.\n",
     "\n",
     "\n",
     "\n",
@@ -70,15 +70,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 268,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Data manipulation and visualization\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
+    "# ML Imports\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.metrics import accuracy_score, confusion_matrix\n",
